# dux-standard

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
agent/: Cargo.toml
agent/src/: main.rs
all-in-one-worker/: Cargo.toml
all-in-one-worker/src/: main.rs
building/: dux.conf
building/conf/: dux.conf.worker
building/deb/dux-agent/DEBIAN/: control
building/deb/dux-agent/usr/share/doc/duxtool/: copyright
building/deb/dux-controller/DEBIAN/: control
building/deb/dux-worker/DEBIAN/: control
building/deb/dux/DEBIAN/: control
building/deb/duxtool/DEBIAN/: control
building/dockerfiles/: Dockerfile-deb  Dockerfile-rpm
building/duxtool/DEBIAN/: control
building/rpm/: dux-agent.spec  dux-controller.spec  dux-worker.spec  dux.spec
cliparser/: Cargo.toml
cliparser/src/: lib.rs
connection/: Cargo.toml  connection.json
connection/src/: lib.rs  prelude.rs  ssh2mode.rs
errors/src/: lib.rs
examples/hostlists/: hostlist
examples/tasklists/: Prerequisites.json  Prerequisites.yaml  install-git.yaml  tasklist.json  tasklist.yaml
hostparser/: Cargo.toml
hostparser/src/: lib.rs
lib/cli/: Cargo.toml
lib/cli/src/: clioutput.rs  cliparser.rs  lib.rs  prelude.rs
lib/cliparser/: Cargo.toml
lib/cliparser/src/: lib.rs
lib/confparser/: Cargo.toml
lib/confparser/src/: lib.rs
lib/connection/: Cargo.toml
lib/connection/src/: lib.rs  prelude.rs  ssh2mode.rs
lib/errors/src/: lib.rs
lib/hostparser/src/: lib.rs
lib/taskexec/: Cargo.toml
lib/taskexec/src/: prelude.rs
lib/taskexec/src/modules/: apt.rs  blocks.rs  cmd.rs  command.rs  integrate-new-module.sh  lineinfile.rs  mod.rs  ping.rs  template.rs.tmp  yumdnf.rs
lib/taskexec/src/workflow/: assignment.rs  change.rs  correlationid.rs  mod.rs  result.rs  task.rs
lib/taskparser/: Cargo.toml
lib/taskparser/src/: lib.rs  prelude.rs
lib/taskparser/src/fileformats/: json.rs  yaml.rs
lib/taskparser/src/workflow/: workflow.rs
scalable-controller/: Cargo.toml
scalable-controller/src/: main.rs
scalable-version/controller/: Cargo.toml
scalable-version/controller/src/: main.rs
scalable-version/worker/: Cargo.toml
scalable-version/worker/src/: main.rs
scalable-worker/: Cargo.toml
scalable-worker/src/: main.rs
src/: cliargs.rs  conf.rs  main.rs
standard/: Cargo.toml
standard/src/: main.rs
taskexec/: Cargo.toml
taskexec/src/: assignment.rs  change.rs  host.rs  lib.rs  prelude.rs
taskexec/src/modules/: apt.rs  mod.rs
taskexec/src/workflow/: assignment.rs  change.rs  correlationid.rs  error.rs  host.rs  mod.rs  result.rs  run.rs  task.rs
taskparser/: Cargo.toml
taskparser/src/: lib.rs  prelude.rs
taskparser/src/fileformats/: json.rs  mod.rs  toml.rs  yaml.rs
taskparser/src/tasklistparsingflow/: workflow.rs
taskparser/src/workflow/: workflow.rs
testing/docker/: docker-cleanup.sh  docker-init.sh
