[package]
name = "standard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duxcore = "0.1.2"
rayon = "1.10.0"
config = "0.14.0"
clap = { version = "4.5.9", features = ["derive"] }
serde = {version = "1.0.204", features= ["derive"]}
