[package]
name = "all-in-one-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
taskexec = { path = "../taskexec" }
taskparser = { path = "../taskparser" }
cliparser = { path = "../cliparser" }
hostparser = { path = "../hostparser" }
connection = { path = "../connection" }
ssh2 = "0.9.4"
