[package]
name = "scalable-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqprs = "1.5.1"
tokio = { version = "1.34.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = {version = "1.0.188", features= ["derive"]}
serde_json = "1.0.107"
env_logger = "0.11.3"
log = "0.4.21"
# duxcore = "0.1.0"
duxcore = { path = "../../duxcore"}
