[package]
name = "taskexec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
connection = { path = "../connection" }
errors = { path = "../errors" }
machineid-rs = "1.2.4"
serde = {version = "1.0.188", features= ["derive"]}
sha2 = "0.10.8"
