[package]
name = "taskparser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hostparser = { path = "../hostparser"}
taskexec = { path = "../taskexec"}
errors = { path = "../errors"}
config = "0.14.0"
serde = {version = "1.0.188", features= ["derive"]}
serde_yaml = "0.9.32"
serde_json = "1.0.114"
tera = "1.20.0"