[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
taskexec = { path = "../../lib/taskexec" }
cli = { path = "../../lib/cli" }
connection = { path = "../../lib/connection" }
rayon = "1.10.0"
amqprs = "1.5.1"
tokio = { version = "1.34.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = {version = "1.0.188", features= ["derive"]}
serde_json = "1.0.107"